<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/calculator_widgets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/create_new_appointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_appointment" />

        <Button
        android:id="@+id/search_by_owner_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by_owner_name"
         />

        <Button
            android:id="@+id/search_by_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_time"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>